fix yaml in cloudflareddns config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,39 +1,39 @@
-#ENC[AES256_GCM,data:ECvX6YV65EKDRKaxl/BZeVtxMrGRqcM39MNoijFz0o8Q98kadgpKKhr1g/uU65OPF/qF4m8jTiLy65PEshHoIoI=,iv:JfeEdthRUOAimrh947G35e6Ko5hlXjORKzGCJlQ9lFA=,tag:/qjkgwOa7P2+KZR8jZ6o/w==,type:comment]
-#ENC[AES256_GCM,data:qXBZ1GbwibuDtNwN7gQvkPg46ivFRoArU2v8QNcuobVQZpJUVm2HqxELPSI=,iv:Fe0Hyoc79UP7KutdNMkwyvRpFC9AXOjdsNUMAGOgb5k=,tag:Kv7CtqwTHwu8+Ed0h5k1Ng==,type:comment]
-VIP: ENC[AES256_GCM,data:H1csHymEcw8pFFJulw==,iv:G1ddxD16XA/SszAsdf7KnY3NgFjFcTFr1IrvaEbam3o=,tag:q88C4ILQQMzWpFjwklUdHQ==,type:str]
-#ENC[AES256_GCM,data:ZR3JrVJcxj9JBUuicIWGexM3HHf/Z23udiT/,iv:F4jFJSG2RMmqfCYGsv2Ix9JwCQKyTPUhcTm43ut/QJk=,tag:0/55nLIwxQytbACY4wigaA==,type:comment]
-#ENC[AES256_GCM,data:q8gsivtNkGnXxnIjXlQhp+70owIC86X7i1PsfTAqVrhMM+uYP2rAyOMqoy/XA664SIXS6F93bRXBUA5ojqg53HpapSao87B9QJB9SrcplqK8Qlrw4Bl8Yoo=,iv:0F1Vdrzy3FQFx0LFgXjD/VnY2X8AmGpWiqe8nYVH1t8=,tag:OCxg7OymxxF8EM7gUpDU4Q==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:10OhdO4jP2xU6CItbZE=,iv:emw6CsrgmJD5Xk8ZZYbEUVvH8JE9ospDqL7Tvp8nGfs=,tag:48KWNTCs8nfYDL4uBVq47Q==,type:str]
-#ENC[AES256_GCM,data:U+6nd83GxH+XwWf4RTwEhQIDC4HC5hZzEX07ofUUU8kGEQ==,iv:064mCkQOLmkBg5FMplRc9Jchk+Wc7aOh02ws+NW4Ie8=,tag:e/5wEKv/MsWuthusNwDo1Q==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:vMK07h6wf2uovOxUog==,iv:B2AAJ3NBKO5VS1tjU/qO6S3zmLVDOsu94pveHAfc4xc=,tag:buVHxl23KwfJcnFdTdOktQ==,type:str]
-#ENC[AES256_GCM,data:wmbqoMtBeJo8RFsGGnQmc4833nqbeQaPcgoOk0GxzWaHX4gORl/A6lsFT+lyD8E=,iv:JPvh38hfqrdIzWy+wAJ3OfF3qJqLlHOix40c6reLeZA=,tag:/Vo+TYs2ZJfzfGL/yGJ+tw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:2OFyDqzsyMMjHZiVQqulXK1noUFG6gOEpyaW8SXJcA==,iv:aerl8AVJg0uyNLGW3CBPUSuX/5sBr5vePtk+P+s39Y8=,tag:e98jN6Onf4ERlume/5+iPg==,type:str]
-#ENC[AES256_GCM,data:4w5jQdgSeZQlqRfhQUOsB7fb0uGQFkvaEZK8FdmLx6MAq8uxewROGR3qnWYvO/r9y7xcTKOZ3kgV+NkPTOfP6LKCZQLbTxirVgE4dw6l9nShTw==,iv:+u7mY4i1FV59k+sRTB3glJDA57bilnDyZE6D0GFCKNU=,tag:6ao2N9WwygBhAHBIqlRnLA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:+rEwpBIpebEikhublhy+,iv:4nCXQ3/BUkjDjTR4coXXZWzby3FSZpEuh5i4HtYEwj8=,tag:gK7Dgn/+FlyefDcC4AdD2A==,type:str]
-#ENC[AES256_GCM,data:CqcwQFeMiPY0mVpyVTMPBOAPTYIw4NNwmXQUe45kXX3b,iv:w7r7QDFqflJGEOzOpyE8MjErjagscZXXA3kTIU9iR2E=,tag:XRsAXuhyhrscmJ+BSNkxOA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:pSNveOrmwmUwVtS0rd4h,iv:GLtwa9ra+Jo+rlQ6+REWWdt56ygb10ELqHXVR5ROFY4=,tag:6mY4gQm+SeNblN5Pmr4wEQ==,type:str]
-#ENC[AES256_GCM,data:7TpHaBI/YVYwLgdQwgKI/e6zGG2v85tw12vPS6rZh2GbFEMwdNGASLGcR29q15a9u30cQd66Sb7IWuGidwWbZ/fyr8fkneYrToK1CXNVqGI=,iv:FP9WB/bS6E0NZODbB5MTXrhLD5KWB1fwiOx03q2zL8U=,tag:qWGp3lv2xdgYyP5wlNAUdA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:BS37jAgDE/ZnSyIvqi0b,iv:rlcRR6LO5pH6uDDjfhhyTzHz3lwTsTxSc4wqN1epM+I=,tag:Hs8KE463Mhy/uDaJGU2PUA==,type:str]
-#ENC[AES256_GCM,data:v8jgASjGSK8KYsS7RiikQYnudkg+WeVmcQBojhTgz97Mhx/ed3uDJm7Tom1HPJ6gxA/QsUy1+1tf+3uoqooXzKCjophT4Jy7pMaM+3gGdfoQe91fYoqA,iv:Gmw4on6D/rbVSTkrmF4Zi7825fX33bnsuctIG3Fky6o=,tag:w5ICq9kaHCkRxHXfLBK0Aw==,type:comment]
-#ENC[AES256_GCM,data:AXIYf+o+P/eiQKYr3vZADhYlpwkGDV1reyxFiLMWABbaCb+hoTkfkwgcejefkiNTSm7xbvYtTOr0wcF6QgynpzkcyCW/TrPWtxRYgpP0kd0FRasPRfaf3dm0FkvbxQn+63q5IKK9OhbfLhaoBrhA67fnqVzn45Mt/sBiYA==,iv:JFC/xMrPmDKDp+XNNTrc87uLwA2s24+2EVxyOwv8uIU=,tag:mmQoi5fDITNnO8rDuEVmOw==,type:comment]
-#ENC[AES256_GCM,data:2/G3q8KXTm9xgb9ljaYW23aFOv/1QWtXZTW9LEBv3QEpkTCKyM1NzkSi54fe6sWWem+7z1k9kzj/0zmKlKVABRXwWqF9iEKMeGgi4sjYc9Q=,iv:ZZaQ1NVWI2BSZF9FuuOl/tQFhPf5edR//BheoOR4k7M=,tag:hkppcUrkVKDDbHoLoMapiw==,type:comment]
-#ENC[AES256_GCM,data:s+rgNtUszTdSFuTYAhYehqK4Hurzq2Y5vti/lBivqdYxPQgFK0IKuOjdkitaJ7Llp4B4IC/5,iv:5TEd4mskiljIT+jJsSxxKdsQl7KTZiLMkYe3ObnCzt8=,tag:tsnn71Mp1dsQsfS+yE3h/A==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:YShRYlytXSuGkpeABfY=,iv:toRvDL00EUAtSgBBZ1vRfn8jQNN4CiJDyMYGeljK37w=,tag:kQH1R5ILZ8AIskfWhL+/Gw==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:ephpOC8a3/YvFiKi,iv:chyJJKGXIhmNdESLbjXm91m617bAHXWiKwMOj12fTvs=,tag:YG/3csEZ0D5r7GCcfNT99A==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:kT49Y7YCb8bKa7HZZPcC9PE=,iv:6vIzBbRRs2+XFP/2mkXqA5Z2N2we83o9gySD8rfVdAc=,tag:KgW9FLAPBvicMFvicxtB1Q==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Llru+nWC+Jiebg1bihAWrAl7OgzX4jXpM0BxT/T5mC6il0Uh6tjC7A==,iv:EIIUeorrsFGq6LHY3wknbdeNaie8FY0Hfqk27952FCU=,tag:1l1aRVq5BVpDyPY6OBj2tw==,type:str]
-DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:Vtt1weoPij9nOEnBH2c8VIft3Nt0rS763gnfYWqWAHbCzKua8Q==,iv:xyx3YuthTlMumIt8rKw08zwClqNEcwWo5wCN+tFo9jU=,tag:UWcNAWP+o5ghz90VFP5abg==,type:str]
-#ENC[AES256_GCM,data:Keix0qPM+DQZ5E0mntziyQ2irdDdQZCDSfkQ0UhtVWIdsoagwlCSAX2W19h12JG6GRHsYY5wLHE=,iv:FqH0zyy9olNmMhFlDTIWJcPptT3oTExaa3djpevtEAs=,tag:XXHurnkO9UanD1kKAeYzuA==,type:comment]
-#ENC[AES256_GCM,data:xu8PbEXzWBqziSWMQC7xdZ6kVSDpdUWbfA==,iv:YoBLR6xBg9m2BHles8V/xnjmobNztKu+PJX3YuptsH4=,tag:OVCYoGubG6D8dqKSinT9ww==,type:comment]
-#ENC[AES256_GCM,data:rXFckOivvsgjBPHa87EUBzPdYgI8ym4TuxxBkP7k+ZpwUthXpVoUtB7MJpqUNKZc+OgAkJNE7EuSMHLGjixwfpyg8usJrTJ0H3IQTps=,iv:A2gVX0XakMIGKouRnGkUvsw/e4GRdzsbzwaKqonGcs8=,tag:a6AMbr5VW+8EVege0ATJfA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:5Qy7vUkugPNro1nzMJbpq9JzW3OwC54L+UKRgjBNBLI965nqlf2rJtkrnaI5PdQS,iv:pKBOgsZsOcvVLN1RR0t8bZ6KnoNDE3mBHg4ALK4LOxk=,tag:NStj70tJOVMxDTQVaPDjOw==,type:str]
-#ENC[AES256_GCM,data:t9FyhNcYLq1qSMi0T+ZSIj/ZtuGLGSjnLQOWg1bzDxHsajgZ433UEKm5Hnb3/B1A0Jk8T5wOds75IQYSwPYJ1rUxGt7N+PA=,iv:PmiFSdROyooNSSyHIc3nXMcywr10skehLwok/D/iCls=,tag:+GUxsjdexn7x7HNrHDbHfw==,type:comment]
-#ENC[AES256_GCM,data:/OTL0SYqp5hnxVHoKLrSQbmxnbi3jPRUGxfNh4x9U4/XediuTMLyX5uqVykHGOIyApGdMiEf,iv:+AD6lYjkFvY956/yL4PgWUYqGqWTVWa8Xvjef10aagU=,tag:YP+EVyY9/cEaUnsqF358nA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:TIB5PnwP5Q==,iv:6eZmWx3LRFWNmHgBFzxFQdlu7WFY4+dW8Xkh/nZuQAw=,tag:mT0fSuzXYwzYbzXYnViayQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:B11dnyxqEgOw+p+LWxR7jE60C4E=,iv:5Cvs3RCgRJZVeaU+b5gEW3iJN0P1Wm74Xl3UkDfxGs4=,tag:ZtMAIN/6m2fKMMY5poTXHw==,type:str]
-#ENC[AES256_GCM,data:SwPO+6V57Y8Mb7DUU5g=,iv:mFOwMI4DLkBg1o93tXtuVh+/BRGKyFq89bIR/lv0eAc=,tag:weHGKNzh+fz6cLG6NElPcA==,type:comment]
-PODNET: ENC[AES256_GCM,data:sLIl9PNl6SL/uxav2Q==,iv:mGAoM/mmXKz3BtoSqSowsfiWl//mJTeMd9ReNa5Rwlk=,tag:7d8eNESoBHe2M5QKsCDIrA==,type:str]
-SVCNET: ENC[AES256_GCM,data:+689oxeez3p3aPZ3zA==,iv:OYe4C0SID87Vz7q/T5upX0GzjtOSFsQM/25Gofsi1sM=,tag:Us+CTOo8TQGJHyW3fE/Q7A==,type:str]
+#ENC[AES256_GCM,data:v+Fn85t2WfPrWUdr+XGXYVSuPXtu3N11VuOTp1cE8SeTsGt8r3H9x0z5LwveiGi865Zn3VUqU+xpWI/opISOpMA=,iv:ah4nh8l73zOHPRKuhS0w3m8vfBXVTPGC2pvig7elN1Q=,tag:oGB1dRy6B/bu2oi1MGa1lQ==,type:comment]
+#ENC[AES256_GCM,data:yRFFpBjtGC7OOMw05vidkt610BiskcPGqnPuY+hBcW5IK/9mv9MOOt0lLpo=,iv:YKgTyzf5etah29U06zfFzZkljW+qCbmK1ppk2gy/a/4=,tag:cOmOZ7PxDEP0IbvxkXQnnA==,type:comment]
+VIP: ENC[AES256_GCM,data:tWAEIUl5xekFruEAEQ==,iv:o3oWkREE0LEfOCDaXPm92yfTBTQFOwobPn5TH1KsO+c=,tag:3nIomdJ6mMrq7KJwyL58Lw==,type:str]
+#ENC[AES256_GCM,data:DT/yvIAarIhvFC4+B5S5GC5ZuOJQV5ncZJX3,iv:tg0/QAkBOJigZnHvviTTc0jHxEOSsXXgWje0m52AEmc=,tag:E4uP+8H5E1dMxuY0S1Q8LQ==,type:comment]
+#ENC[AES256_GCM,data:wMLg91eThiZAUtTpWwWZNBA2Bi+jwzZQDhPpe0L9Y7XpII/Jq0dMinf/xTePjVYYxoLnd9ahKaYtAzyPam1GadcM7nxQDaWErKG7ilAR5UHZnqQKpcpEdN8=,iv:6quMKLrFXSjgEqKH66x+Y1vFOQPalUU3rmU2jUOk5F4=,tag:ZOm6UhO/deuWp+zmGwOJOw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:tmtQpNy6A6xGy/qSGfQ=,iv:jSzimp2hnouftZBBcpPLsEYIrxWhQr9+gSzPN+pN4jY=,tag:0kB7M/dSWJp14W8Wi2x8iQ==,type:str]
+#ENC[AES256_GCM,data:Q5xS3w6MChZFhHWOIGecy5yIa2w8tmrWcPciZVrTUPkc6w==,iv:qEFgt/9GHZYmEldeT1rVmIcwFURQWxim6INeLGO2C50=,tag:ygjxd4MdJUdFtZIVD4qOGg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:Tjx6tjKZs7WOqVMpHg==,iv:NBZt8xjfso1Y9JFmbX2W69wOe/tn0ZBtCV2rtPFp/B4=,tag:HJ/4ftJ7Lm/cucZJAn8vSw==,type:str]
+#ENC[AES256_GCM,data:lfkSiJMxd6u2r+1rNlU6StpfxwSaGhOgs8TJnKaEdWDrs+ChxWl/5UgeRQIsYJk=,iv:wryNhk4QYfQkuZTj1isJ7lIu0/Bt/qKdTO1h/nK4aRU=,tag:rrS2bR4/tKYrPpFaIu8Ztw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:64ZkB20ZFnxa7FTbDTMaBvd2WNCcsTSodFyVw4EOVg==,iv:h4Nav2t4TBgqgQDMNCfryE9TsQTAujLkl1pu5DjeBWk=,tag:jnpF/zQmhR75Ii75eWGxlw==,type:str]
+#ENC[AES256_GCM,data:9akAJDhs5ybbH87J1Z6PNgm4CQAeQ3kt9QcDvwziUxOv3yIrlLCK7tPKJZIWPLMu/lQ0+Eiok8CFfds/eZMH1qNI3ZGYGULhxoSw79Ao10D3Jg==,iv:lt9Ofoy/pCyQUPuEWu0Qw3RcVW7yganTSP5rhmpQ7gU=,tag:Ms7wPy1jZt+UZRY0kp+yaQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:dae8dEK0Zj11F3X5GFle,iv:S1/S55swtU94WPT+14FdAs5vjm+/A7r5aHr/yJ3iH8Q=,tag:bk6Pp4DCrq/8zNZ/3+OluQ==,type:str]
+#ENC[AES256_GCM,data:QIkysaI7l2zARgSYb/nricEz1Q1Hd8N80Pl9EvVudkaF,iv:pzVT5VikOjTS/GXbCYsvyBPCfnijFCZwigVs/9TaDRE=,tag:WJZIRIPxHDinVQ3c4UkYgw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:YlrMEBPQK37ELXvL3XkH,iv:SMHAqcBOSJBkutGFY0LUN7WN1/r6a+uBKLpjXn5N4U4=,tag:HP48eqE9/F434gznSvnZng==,type:str]
+#ENC[AES256_GCM,data:gjEwUMaQ13EyhuJPkakBjKVvbSI4tUjeL9p+L+YwO2hDqoYisL10i9XFDsBFPN3u0BRenCva7dnzzPSSGdble63miERWLEWgdmB+LJ9IC/0=,iv:7hgpYJuqikuD2bYdWL/V6fWF6pOXPappikpX9QMBVeQ=,tag:qDuhyfhkyZQi9yR09FOWQA==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:KmLJ+lK9FD5UmFvOhJil,iv:IvqTn93s+oSyfe/2J4drH1ZYnRQhybm4oY2oiaLVqx8=,tag:w8RTtsqR4Fuo6v8buwLvpw==,type:str]
+#ENC[AES256_GCM,data:hZFxFSJw2iP1AkzU+uF9Cz9dzV4ZUDJsAMDxFeK4axAdHtuM5g24XFoBtogtLFsMYfajuBr4NRkfBMOcD02kXmhKPvyUuPBEthy6N2obMqD2aVLHogTV,iv:Z6F9qPYsjqVZYl6brp3ZFkfi9aaJ/Pe6e1bCLbC/J8A=,tag:hQ4AlaBSsZhJ8m8BD3M54w==,type:comment]
+#ENC[AES256_GCM,data:h3XojUs4zhAraj58pJbcSBdRzuKIEStp1ZWrvvKlOuLlqpssiu9lNtKNrX4P3FHFqqDt+NeKOnr8N7j9Xz9/58OeJUl7Zd85dDEVjZiABqqwf2c+KT/vMs/NHEgr1kFTvvo3zlQSbkz1GgIqlnre0p3ctZd3mWghSx0g+g==,iv:iARZoF+zL2mwBXB7idARnEapz6PDU+ICP7N8aAewmp4=,tag:tNy/lr32y/LKNxY6nIoPZw==,type:comment]
+#ENC[AES256_GCM,data:dKMpQAfp8JumWTMTiy5mUIZN6uaSiQicwZqEv/2dLzZ2l5qFdMuIq52DSzPPjHPEdBF2LC23FI+t5Efsqz1gVFfK1lY381WL0sz3e9vBVNk=,iv:oSxzXbuqSyXafAX+NPkz/xaxIaVk2/8icSMk0+krQ9k=,tag:1GdY1wDomHlmGe821v0PBw==,type:comment]
+#ENC[AES256_GCM,data:NCoKDzH8WXA/W2CX97m2h7AbehvEKGIlGqLBMJgChKATdADnAJ78/LyhqDC4TZLYIBouHA1i,iv:CdtVkKmRXIJhGBJr9f5+KqMkvPA7suhzClcikzwSzgQ=,tag:BTaKSGmGsuB20Lv572iqRg==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:f8q7C8xj8cxOtI89H4w=,iv:1PYltA8Ttz4iqMdsvSoqpz8zCq65So/UlOUHMcyqvlE=,tag:gXZKOwMSS0JQku/OuQ9y7A==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:jNmzbtwfvJiX9hVn,iv:/9wyVKprxgEGTmhkTjM19b+8idz+sOIz4wsgwSWP/dA=,tag:LBbbYS7jGcXy09T+Zu12nw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ICcl/jz9stYdwC5uNeYRYIk=,iv:2tTzMIRMo3RdkluaqoglrWeO+U+4hGFCFXvofWUp/PY=,tag:nyvx4p0OV9VI27QQSHP3mg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:R6hgjIRHRZjdbqJNwNDdN1rZK7O8AsCGbZXS+w+oEcCPDBxU6/N7Lw==,iv:hp/EYLSz6vFUJH+hYGL3Cq90xXSRTxmysLexwfCXro8=,tag:O95mdh8Cr1cZQ2qp3xG/gA==,type:str]
+DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:7t8WDi22HYkJXQ7tJAGb4vqkYEf2X0xOAxL1+sjojKk1kJYVPA==,iv:j0/Z4KuqNZJvIe9IivYz9VGHh6pvCXqzvkef/0i4nVI=,tag:NmCm/ZLtWbkOWSWwRrsSdQ==,type:str]
+#ENC[AES256_GCM,data:gg8GIo4IM3jWUTzLz2+pQfYt1VUl26SL/BmnbVi3Wx/03+d6FAfGXMd9d8AVQ1cd2WZFErUSuXc=,iv:Gn8ycLx33VoLkwSuAFN3AXqxn7QW9GTgtnmodLOlipc=,tag:NDjju3MmAds4KodJeKDPcg==,type:comment]
+#ENC[AES256_GCM,data:NQecsuZvxMYUSlxTbAAOWvpugn0anJpHjA==,iv:81EdpOHuvQBijgue2fUtgiW+nFIOWIxh+jzyQ6FT1x0=,tag:Asxb/Jo5fC/XEq0DOaihKQ==,type:comment]
+#ENC[AES256_GCM,data:VCJssQ74lKAVciInAZ0IFzmJ02vpuDtK0dfQBgjHnHZ/ZmFeDJbPGeKlCj33iDSZ5WkNXJCObELOrVrXWJEUEFJtEdt/IKfdywdkjbc=,iv:KuNmIDSWjlSnkYTZjoR09xC78MOWkxAMzA3xkVg8hNM=,tag:2E4yPstjqs2CtGOAJlCdZw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:N0nsR9V5cWlTtqlAdR3cPBvSjFm3YayqCLa7tQ/8cEJXAe0B71q173lFso4GfRQA,iv:KGkuHPIDnUA58MICvyGfTkQCjcfNTAgAHTxYlKib9c0=,tag:0ocpanclzmB9lUbg/tV8mg==,type:str]
+#ENC[AES256_GCM,data:69lVQOm3Di8GDCOZUMP7gGYCpohlZjHrqqgObJsawqlmnID6hMh63tykm/+wyoMo77wAAQ9dFr1+y0t/d4lxrFIUak4XhFg=,iv:o7V7B9M1MRA1xuRMRui8abM34HiorAGabTMLw3u3VXE=,tag:Nb9y6yPsTOxukfATQHIKbw==,type:comment]
+#ENC[AES256_GCM,data:KXQV9YKNOfZQxuGUwi2Peo/1tH4UZrFdmidFcFf3e8BnsH3dlsGTZdsmdfe9sQVl+K67tydl,iv:/Tv2FRD3Yn+7OiHF3zua9m92Iw3EycfTWZpRIMQUI/M=,tag:yRl0WGQeAWkE9wrfxA1kcw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:8ypwwbFGOA==,iv:Zun59S6/e7cBzxHgF+PC2/7ZFhw5617d4+FIQoz2QOA=,tag:6eXKJvcWIzmhVabBBwr61g==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:WB5aA3Jt2YPHSTuvDg1AvZCejDM=,iv:H6GBHdzgMtLjPWWGXUOPLDv0dCJ6WCVZCxehioM2bQg=,tag:F6aL5RmkFak1vhd4V6/G4A==,type:str]
+#ENC[AES256_GCM,data:cK3ZNIqA25D6WFOzQtA=,iv:K1PmXSl2lyv5ypZ08+/0RnPd/dxfUmenvz3tJAv8lto=,tag:P9iHPMNxXC28THGuzBCGcQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:DHKrZ0pIhtCrgwBhAQ==,iv:db0FHuXF0s2+C3IRDvP2o54/ge6RR0mH/9Od7mZOXh0=,tag:Z2iBCxYhMJ2TJWXG1BJwbQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:CUFoMSoeH8ZYafIJwA==,iv:zuakR6phW1G2uSls3jUsUtiQQwZcLFgGPKUsrYBKVFg=,tag:n/0KRWd0pGphE8L9sXZbmw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -44,13 +44,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXcXJreTBRWnkxclFhVlg3
-            cmtIK2Uxc0RMRURRTloxK2Q5OXZ0YmNHY2xnCldzZGp4U3dZN0lVOEU4M25XbDFm
-            T2thbC9pSEI1MEpsSmxCZW9VZlVuck0KLS0tIFhRUzBIbm9nVWg5eDZsUVVpTUl3
-            QU9UL3dqbFZpREtpWXV2MnZDSEMrNXcKoi+GtyL+zYTlyWAVgTTkRNVnt3iDBl1r
-            z6szdsN/Tl9DgmBl5b3wjcWpuGkt5GVUyWtUBrTlUdzshMCH73FTwg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoc1dpMnNPMFRId3ZWMWtJ
+            SUN4Y3FRTlpRRktCbWFkWGNMN1F0ODB0QlFvCmJxS3hYQ3Flakl0MnF2NGRwQkdI
+            WEh4TFZLeEw5US9SYnpVbnN6VW1ISjQKLS0tIHVrSmM2OThvK3E1cFdGcTY1b2ln
+            Uk50TVY5R3pSU2p4eFNQeTFiL0lvQ2cK0WyuwvdJnJGzvcBuhVunv+dFFCaOu+fa
+            tEH2wN3gVk8LuIPDnznpX19zUUUdbmRf9Vixe9xIuzSWj3azoezejw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-28T21:15:59Z"
-    mac: ENC[AES256_GCM,data:g3BCCeZtPBwKqvWamL7GN/Abl/bSBCjCamPCLcriGIIokbUg4SS9dFgERDChz7F0rBQLn2176EGDK2ClyyBUFA2lvs6e5x5tJTiTOZ279i8yAgJswsEPCcjPcmX+9u+gCokrIKE8Lu+f3LQcSa6t+L4CqB2D/wIgbGPPUNkasI0=,iv:bKzD7Q7GPhIhzLx/eG8pUpgyGJrflnMejyeW1CBFkm4=,tag:qfp4Zb9morEQDPnQIMQLtw==,type:str]
+    lastmodified: "2024-12-29T21:10:14Z"
+    mac: ENC[AES256_GCM,data:wTULHyEk5BAAKZSnI2LDywtc8nDiVBePVXLJ0Wbf5OIONj5Rtqko8ma5mQjHYuXVh/dyx5d5mdG8K0kUZKU76OV7FoW/onkzmY5LuJvgHl/AlO0lCJ88TcHSrALOUvA7etQ0xKkaxB/RENk6oIeSJg2/Ezymj/qavbKVEc+AzEQ=,iv:t7HrzrITQFaxNitVU8QMvRfYIcRKAFzYxE8dM0rpdOY=,tag:pxXcm/b+q8Gon2vs4TnL7Q==,type:str]
     pgp: []
     version: 3.9.1
