--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,43 +4,43 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:XUHiutuaHCkNIpA7pwu5pZF9h5mqdNdezq0IirltMk5rG8Af9k+vezhmDDj4Lvy24BsAQrUEA540qHofvcTVy3w=,iv:oMBtK1rJOTAOrgVfwiHzeWABgV8BK0vDJ5OkN9Fam/g=,tag:cUAxTlpuv/qzGixwLxvqlg==,type:comment]
-    #ENC[AES256_GCM,data:CZVr3oFTsuC9Usbps7Gcjz5iIFSGAbSMLhytVyagqEUU5aRVFSjU1jqtFig=,iv:bem/WZt+WbLZappf1494tom2N4uGHvMCJ0mvHjiu05E=,tag:lRJbpTIDBK4HFEuFuGZvww==,type:comment]
-    VIP: ENC[AES256_GCM,data:KH/m3p5gPCswPXeMAA==,iv:Ye4xZToE94Js2Q3Ih9zMYQN7n+xhAkrW5967LerZ7RY=,tag:nu5dtRBV0w5DjxlQp2Xk5A==,type:str]
-    #ENC[AES256_GCM,data:lL/Lr+C5n8kEjJ1/ZTQxzTcrmg5NnOoyOtIT,iv:QhA+vubaP5JGmIL2KU/pqDAgv5DhCUcNMn7pA3UkEEc=,tag:ELBSMPpiFFjqhyylx2OqYA==,type:comment]
-    #ENC[AES256_GCM,data:CGiyfc43vpsdsYyNt0KxHkZzceFjBut1hPnRCvVcrRWS7N3DdtWanl1Qa8S7JlCs3Ny1ppW7rIPkbbWxeBTgBMuVIeDPero6swOcszTPaLLY/7x2leWfLOs=,iv:1lox2FKRZ2X34qXjFb2xSwVcnKuCsVVeHyvfh1M60RM=,tag:wAKFJHc9fzkiBVbl1QJtSA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:/njDFOHPJWzMIE1xnH4=,iv:6NT/AMd+QhNF9dRDv9aF+GLQ6oONxTh1sRUdjSpIQ8g=,tag:SgMzgUXHDiz8YgCvuKMVtA==,type:str]
-    #ENC[AES256_GCM,data:rUGAokLG+W7to2eNSAS1X5kLzZRXOSWYSRSHHRMApOjFuQ==,iv:kH/bZ7CMdF/GaL4YJVjuU3+clTUicYeZ/M4Q4M3Cjbg=,tag:xgCdsFFDom5GFt06GmeofQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:/2NxEF+fu1TWzwsJwA==,iv:RZ7wHK+IqSMDzJ71mUgbKn0ifqgKbDjm7piISUJIyWA=,tag:42TzxES4JrXgDNSFu34DAg==,type:str]
-    #ENC[AES256_GCM,data:F2WoEZmjNwsGnIbtPssp+aEEmHwiBe++Gq9EfKkMfayYjRwE3JHtesLBr5Y58KY=,iv:Nd9ekA3xAr+TXPiONA8JP7PU7MxrqXu21epytHuDVjg=,tag:nzjYZkPWv+reQefF4W63ww==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:BP9e5Iguh1MHxmh/wP6sUOtmlMzlUk5oCQXB5OKf1g==,iv:jOG7NKZ3VsvzrtWWt2SQ43A2HQFxoOMTjMBjiAEOCQE=,tag:ejMW+RnbWt4ZlXI9vvu95Q==,type:str]
-    #ENC[AES256_GCM,data:dDgZHckLjSrzusG1Psc8jwxaUomgg+D1e4roRTBZnRWPk7utUD2TdGv4zbkyuqpPPO44ik0agcSYoXCT2/k1n+VEPeXUMtDPUAZbNZJtmn7ehg==,iv:jOCTXx6TktpTLvy2JGa0B9XPhGAQH9sY3FkDMyLh2r4=,tag:6X3Uw8Dj17ApOXJX9sAumw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:LKJvvi6tuQxWonGOcqpb,iv:hCkMP8nBW8bsHTBa3mNo28iBwbYsiWxkthKeqgpXUzc=,tag:fhuq3zZudDP2tGc9Ys1dtw==,type:str]
-    #ENC[AES256_GCM,data:EMY7NSBYazyPkA1oPIPxgVm9sKyi3rRLjL3hlQkPqegp,iv:e4JXdah2Tn1h9SvM8DXMbRkwnrrXuYT2OFYgQ4Cl0Zg=,tag:xjM4LXdh5akd1lrt1kuLgQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:vN+0Zc6uKJgN3PxT4CJh,iv:l4ZX+8K4Y0WyTvE+9vd9wFkMmMvRLjHPr8l/RRYRrv4=,tag:zhnFuUL2scQvSPZjJFksDQ==,type:str]
-    #ENC[AES256_GCM,data:M4qfXu8PDeygRfstQglbwXWTvewn43FJ8stcbMUyFZlkZxGTbEiTzSXnYpIYKcWFszzuX5xSGGnAJDPnlK0DRlTYbu2IXSBn91zi3Q1QaKY=,iv:525XHxHon/pk6w6y5JNm1KkLMrthZHY8e5erkmD3R0I=,tag:RyZjr5AfyINALnUWLwNvGg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:XbLJxi1fsuyTalnNczuj,iv:OLkXiSKOkIllIE1wgNQ28lpyZ3usuGJb88t9iuUylm4=,tag:MWuo2im6jC6LGeq1HPmo/A==,type:str]
-    #ENC[AES256_GCM,data:2gDm9kuvrAWy1/0IPRorkQpZkFa/RHQpl7+nq6RBMBhYvHn1bx3HfDd8+eJAkUX4onZjl3Vwsq6M5ktUWvtarWtbdddNS8i5QU8e2SbgpYv/4TrrElGN,iv:l5xDjtImHRsPXyKzqy6o/l8zZA5VaJu0eGgfSLaDX04=,tag:Gq1ASR4kbMVCZzQg44FfRA==,type:comment]
-    #ENC[AES256_GCM,data:tqQlwgK45NSWh3DRv7jNGjvNQDjwq0WEUDgHXvhft6lBd2Twkrq6SoBkOPey6Wl0pnlmPPkVkL2YDd5jvlQuwKBM6c2w1saG0Xri27tI/yncwQZyx5GSlBtFvHGS055cbPuCmIt0W1QL7H+MVjfptrxm7iT7+yBWJUldXw==,iv:9MFTDKjypD8SIwcjxjXzJajwsP+TpmIJi99rffpKWVs=,tag:RRw+AQiAhFu/Pp32SkGChQ==,type:comment]
-    #ENC[AES256_GCM,data:QYarh7ff+28LsPLQwt91caHAntDZKxAqKzwhjrLn6YUZDb8wVy23YrpfCW5eA6Hw6TVlyP/t0uHiS6P+Mq2/0ArnC0NP6iUI7ZDSifm18KY=,iv:H+xmQi7+LaWsqsViS1cnzPqgtO9boS4z9MpRLq7ksPk=,tag:MIUKzRz4o9x6+xnR49ADIA==,type:comment]
-    #ENC[AES256_GCM,data:R6MVaxqvd4dvYBeaTM9gnIKIxhTzJlCLZurb1OpYDeRlUJcDIY2wBXSNQ1+uriMOtDEjUP0f,iv:7jB0j13ID63hX4LdcVepZ44Y+xc4mzsfClzZTgaqcGc=,tag:30E4rvDq96fUlB8O819GWw==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:TFRSBcLp66cWtSLADS4=,iv:VQiQIlityolaUiL/Mv3XZPvfyHWZi3AbyGwKmwR+VyM=,tag:gMxpuMrx++MAMfJgmJJTvw==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:49kgZ28V/5U2BZ2w,iv:6M1ZKYQzhUHKclyO73Wv8q5xUhnDDwyfcSXYh/us3Yw=,tag:SjFPyBumMUoP3R+Q1oz1/A==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:dw2dfgOT3HnC6izylfV4yOM=,iv:QPcTCz7wlFyY3ZxdBtrEG/55CuPaiZ+lnlGe/osXzB8=,tag:6bRxkrxpl6zFh76GkHEE+w==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:TOtsIVgx/JcH57594QaKRGOfaMUJyLsgXRDL93/hWIi15N+LzLLnhg==,iv:cWdSHlwZ/OaCygk1d9KqelTqUQUYJGKu7PM41fKhmxs=,tag:XtLVbmuZOHG84OMGMEJXow==,type:str]
-    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:xuUOkhYl2xgwFvcbt222TmkljSCfIvf5lBolPVbhJanVTraNCg==,iv:z/0rLKfU8SERPAk10iv5cE98exVf0+/TvG3IgTnjuLE=,tag:8UjQLYbO6KzU8XzM+Pjncg==,type:str]
-    #ENC[AES256_GCM,data:YS7ul41tviDy0yQREKHzBYdTYdBnDfN+FX5g/1HJ7cbp+Lxcf0tl0TggliDJ7zfbn8IG5vaMGoY=,iv:2nO4zRIn0DhIowI9HyhnGfsU0j/0Q2ksFsjHOQq4B5k=,tag:GXiOT7DgjUmNOGcgzr3GGA==,type:comment]
-    #ENC[AES256_GCM,data:RHKaHV6gGHECr9HtiOkJ3cxBlia3UR+IWg==,iv:aavOT/BXButQ4688lkKwfl3CDRA6p4CLkdM4V5FwQyc=,tag:XgaxvX6/zdcf9G9V2CYEDw==,type:comment]
-    #ENC[AES256_GCM,data:aCR8M3pGAzyBdbe0jMIQHW4KXZRpntdujyeVDLlQHeQzTJm5jxQ2wGphlp8zpsxDpEw1/3RA8DqY1f0FzZGRRWMGLzMyGaBDTpdC0mQ=,iv:ZU8fFXs/7J2NNz0YW7u+fQsPx34uJSH+hp30ziUidM4=,tag:nZcvh7tvH/xEF5y4uZZhZQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:0kh/DwGk/D7WoVJ0W194ekNHemUi5WUJRD9LzJPlMoofwKtG4LTmlynXQsvgaDbl,iv:8cQ/TBbdieFa8FoHPkSD9uJ7d9pRQHc8ijpxwAo/wJQ=,tag:6TNsIDc7QUUP1d9oJnH4Bw==,type:str]
-    #ENC[AES256_GCM,data:hwyp/3h9SzVqXK4/mLoBrZxx2eHqZLOHRjL0TMbFrjB4myax9vyhHE6LsU6lEhjW8QBrCkBD/opT7aa5xw9QAO6EEcye8pw=,iv:IWCfKSU+nNx3GBUlzyEV4ddWfD5umhM/sNkkLAkOH60=,tag:ZatTMq18WKToOqZYIYANAQ==,type:comment]
-    #ENC[AES256_GCM,data:J5Om2wva8it24yajPmLVIf/jntitLoj/kNqmqqikk72rFQ9cVr58AToXAWtlkbxBDRWEvGfD,iv:pzjoQqvps2w1oHWB9GgvZwfxTpyDo+0ZoEIOQTfH9B0=,tag:Wzir5MLEl1jv9i09St3Uog==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:qUNcnCj6qQ==,iv:2jTEbHOwXx1IQarfq2tc9fIJEBBq2oOwiuv1KfGVIZY=,tag:1sT4YOL+YtxI0/BtEFV70w==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xhjn3bbSCe3LA5UARfsyVbc2Aos=,iv:1IXO3H8BsjHKusKL0IlhOmIUBql5I51StwS8Mj+8AoA=,tag:TxZwrz8U6bdrlJZvG0DG8Q==,type:str]
-    #ENC[AES256_GCM,data:KWn7NOOgm73oblcMlA4=,iv:FSYpN3keGFD9eFezPxUjfPpV8mu+xdEuDvOkYr441eM=,tag:2cpSMv/Wzw2o0O5if+OVvQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:6iD91dcmDm/0swZ/ZA==,iv:2DRllSrPybcP6ZTXxKFbQJa7TzyummHyfnWWodaoSOg=,tag:7DcKV/crOi5aS1lJSK+riA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:SFZQZ/LjwiaACsdhCQ==,iv:E21j97P37U4INhmobZM0JAD7bL8DJO9AYxQZYwDCgOk=,tag:5+DPVj7pCflB/ywFC/iRAg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:TcvgrA==,iv:R0NO9IVqEi8wDidosVCK2+eY1byI22PZ3JzlssA1kc8=,tag:t6xrPLOYEJ/m2qp33sHcEA==,type:str]
+    #ENC[AES256_GCM,data:XKmBaTsCAX1gccWiz+dwNnrldmrp9T7UzpK9QUOPOIO1cqe4Exx8JQ1Kz9uV8G57GbkM4Cdvrz5v90Oql/Fa96Q=,iv:YQpnXe1sh1qoSV9DPK77b8HBdOCXXfoPMnS2aLrf8po=,tag:fXl7oFaq3RqQWyyePcjYNw==,type:comment]
+    #ENC[AES256_GCM,data:HiNFaqddfhFU8CcjLUj0EUh7grwJ61uJ+58gaoNBSloTFoUA42ZXce6bBG0=,iv:+nuuYUrmXfByxCfOlMocBauNVuBornQW/vZ0hovVb0E=,tag:21mc/qaPgtsIQibC8+PmXw==,type:comment]
+    VIP: ENC[AES256_GCM,data:BxMPo3eDta2Js378Cg==,iv:/JELLBclczVLhmuVRHL8naz9fh6xMEgFED5orPKs6Ag=,tag:8Olf/XoU0Kh6wD6GW8Kwew==,type:str]
+    #ENC[AES256_GCM,data:IZgB3EfXr2m85bEXkTqRI+i/qHw2jI0nmp2r,iv:9du3IAJBQXkwmwKQoGs/l4d+Kg8paxTt+PlVy5JBsrU=,tag:7FfY61J/XG+nVdGo+k9W6g==,type:comment]
+    #ENC[AES256_GCM,data:EHyIurh2iJpdgAvXAXsHHj+1P6h7xXQzs9t96tGe6H0uVqlnJt8VnN0OIYM9BLt5Ry/mfbwVQ5BhZsTbyWozRGfxM7lCy7IfvJV0u/US2IyFpIsGGVNlBw8=,iv:HAimkz01QJU8QY9j4Ag1uIwszkEKhD8S5oQF7BNumQ8=,tag:ANFoxK7673le9FiPA+3bzQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:+M9h16GFiRsz1T9p77s=,iv:S0hRhca2tcFjn42FH0MYlEK1szQEft3prumtA3HTuc8=,tag:7hjC7vv4mkbirqP5KhxeBg==,type:str]
+    #ENC[AES256_GCM,data:Sl0xa4N3TjwxdWaKDQJSHxjkFgWcBJhDVMk0wjRQXz6JDQ==,iv:fIvGpWgijighcgJimVruOoN3Nlgkc4F2RLsQ/6oK4Fk=,tag:UOsHdWIwt6ukEUsDDx2t+Q==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:Xhgk8kfeEVykhv9HHw==,iv:nWn+fxdaO6CFhK+v5BhbGe8vBwAlfE2BWjgEOW+PaFI=,tag:5jTGy2rNr/y59TsCchI2OA==,type:str]
+    #ENC[AES256_GCM,data:MvykpNLx2Sz/uKcfIhDhxPE5GtkvbO/v5FIuoo0sxQdOF9OK6eeKuquEtgJA26Y=,iv:r+aC8IKxHbHaTg1+m9TOFZWs/np6lxHhTgc8MnV74Vo=,tag:n1UwC8MmXnSDdHRIGItqIQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:6D44GuQEyB4nJYL2IHAo9XbYWtucFxNXpDPRttzzBw==,iv:Ox3MMbt9erGR4SYqhUPWZDnAvqoHJr2risNrJIYthQo=,tag:e6p2AC3s9cdPs1slVpXrFg==,type:str]
+    #ENC[AES256_GCM,data:m5BCx/i0uACDwqv1I0N1cI9CEBmtsY3Tvtyc88LGfTEdfq1vUgNbNL0muZ66siFezAbMK8P4ruDY4k5uAxcXJDmlZEBZChKMqR/qweVwYuE3Fg==,iv:5/Xim+lxgeQvCSwBN6IyXmirch9u7UQUyihWp76oSXw=,tag:Bhv/qzcJPsXeqi20hZVuNQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:zWADuOtyUTxA9lrGzzYS,iv:2DnO989rD3QamTDTcK+kf4dXU4iWoloPxW4z718ahYs=,tag:V8s3LIhd9qHXW8ZheEaFYg==,type:str]
+    #ENC[AES256_GCM,data:9oLycEMKrjdurBhfw3GtE0f2ZQkA/7IeDQ3bNHRwGXUK,iv:BAQSDFdVKU1Qen2knmXskkb/skT4KWPO0qP27Q+Rewc=,tag:1OxRHXK11PbDR74C8T81Kg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:Jd8s4RV6hWFK0Bb/NSnw,iv:+3tkuapf9603atBgfHWHUYc9xDZRQGpHXHPyasz9Nd8=,tag:/m7Bib0QI7TLwFk2jiMkRQ==,type:str]
+    #ENC[AES256_GCM,data:qeJCqPNHUfld07Fvw4Ms6yBBlsmNnqQjlseqe8N5ZKLRKrpwv63rrmAX+x5iU3Vz972Va4TZZFruhMyRJbKK70YQAhGQ/dHt1QKp//QUcP8=,iv:rGOX42iCklxnxXO5skC9iANShzZ0Vcs2GoKljXefpGc=,tag:UkIHYFfGhyYekEuDguOazA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:suxzsJuHd//TolnAZaMj,iv:z997PEmPsK6eRN+EDdOY076yPOO4z/LxDzb0/8U4R5M=,tag:naNM1xf2UrhfJLF7VOWGXQ==,type:str]
+    #ENC[AES256_GCM,data:S20Lv1CFDlttKzrIYdfFi0/unVyhL3I7p4jq7tIvyQPTVOFscuvL0edizbaiRumZF9e2b7c4DDHnL37fdDorWrC6VcKXbLrILwoAplc0GwmEmUq5mNTs,iv:/OF6NwtM9e65Wq0WSAxbLiYdx6kj7AoeF0xSWmLJXQE=,tag:Gok3VMt6zSdUJQcJvAU1/g==,type:comment]
+    #ENC[AES256_GCM,data:edqvYhAWP8Ot/V13HiL0dEVbDJUcTa0LzpUPjvHWZoBP6tkPGlyZcWFknclZ/EZLvPagB0XgSrSGYkPH8pj4vLyP9ahpT79jblWStdsEpTH1ecPgb00WBk3PK6XLSMUzd+8kkx89IFmdtIBhoxpPtjuwOJw/iMZQqX9hPg==,iv:VTO+lkVPi7nk4kPFNhctqOdqC817PFYWJViiT5eRCuM=,tag:wBJ0t354Hm/P1sAInuCHDg==,type:comment]
+    #ENC[AES256_GCM,data:AAEEAb+XyQw4do6+C8KCtb+lO6revQ7hjNqLgi37q4X74ECg3exZhV3mh4tkn2Blq7jmpLDhj8p984XRCZ9OrZs6blk7QUxdSrfLgFNXhXI=,iv:s5jul9zGpaHoREsFCy5dhtmaUYSnAQk3KIyILmdL07M=,tag:5BZiszGn8yeIG0rzRNnthA==,type:comment]
+    #ENC[AES256_GCM,data:Me1EmKSoclE/B4rxWvDpSIh6r6Ex4p/6PXvY3/SWjOIEtTW13QsKb5XTANq2Ze0uuvh40MAA,iv:GordzMiDK+fG3nCDsWk34UmED8Bn3l89/NiFSo7dBU8=,tag:Ck5nXVT155yq66JSfTTSTQ==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:1TCvfcAMK1VGQHexV5E=,iv:9rM9Db1+7QrS3GgM1tyZxQ7hjsq2/iRT2fwjfpnN6N4=,tag:1lvCGPBd1QBJhTrzX63kzQ==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:S/bVfyBNpipZ2y/1,iv:WFt3SthrfCIBrNplJoOsP8lFszudbbDPujLhSGYjWkA=,tag:N0WqwdwyH+pPxpMW+2twBg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:64pPNA0XssgptJTshFKGNxg=,iv:q6Z3M/+c5A85AfBy/tTyhfLP4BG04cLL8krbKC30UJs=,tag:CJ3xfK6vSbW/rHo5korQzA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:vanY9ewT5hl6mhN9bpItuc7uMO3Xr7Hbb2V8yZG6PrIolKIZIi62AA==,iv:swl79IKG3HRVhVB/Ic22c7TNnTMp2lHNnTo2CZdyKbo=,tag:c5lWt4jeoUPaRAo/I2Mm7A==,type:str]
+    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:nm44DpNhSFUsfnTrw9iK+yqE5SSLhPkhMwDovjpJFnuRhkYQNw==,iv:jNgKO2biNguPWjNuKBdNRXb0M2uqQzQ6D1MW5Jt0Iy0=,tag:zsTMFh3EilQyOgd0CocUrQ==,type:str]
+    #ENC[AES256_GCM,data:KUkvlyz9TGHSpEAP+ntMTy2pV2RWoZdzM8tnnXGCssaGT7SxA0VDJTpo9XHM1COfHcYpZOOHJIA=,iv:zp4yhQcMJWYxO6mo9LgCGC9sQzI29tzWaShd18hHqtE=,tag:iiJOzY3m9OtoGmyzt7QX1A==,type:comment]
+    #ENC[AES256_GCM,data:v/N0gMWIa18nK3hEkO1VlTQ9S05zTjNrEA==,iv:+AGEBzXiM1+BdifCF8omR9o9km10QJ6Xyh0iRePxkHs=,tag:wNiQbgJ64lwqynKUeyfqaA==,type:comment]
+    #ENC[AES256_GCM,data:yaUdUjdxev6A1pBHzHpkkX8cPReoRFDzYIwiDZjyGAyOW85qa82BdZyt9c1ey8+OnVzVJgPCZ6cuh+n+IUyXU8mJJNlURb5uR089q+4=,iv:otJdzaCXKmELMZ43njgxrv/AWc2cOuISfxfERys8rFA=,tag:yY8ceOGsB8noYCz1AyRzMQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:INtPBBL3sDmMULuUCSJE+T505r1ysW1/D2Mciit2BHpB95hyLvGdYue2yJ9dKXDE,iv:GYmEzE/ZrRK0tQWvyCKCwKMTMQu0PXMyfPpxZ6VBe1E=,tag:11qL0m7kOMTzEweTjxd53Q==,type:str]
+    #ENC[AES256_GCM,data:eSjSZp0u0/LsSIPnsHy4JsPPvaamW1UKuBTE/v7QbmmpPd79nRCCsEnRp9mu0qoyjjSNhlyh3vl5CrBhs/aY/ylUqJ5O9o0=,iv:dXNUyw2iiPPmVSDIylG/KzC/YT/eKIS141zVM9SHqjk=,tag:cS/pmcLwfp+OdFcwmNmIyw==,type:comment]
+    #ENC[AES256_GCM,data:KGuNDyTWIMtxAsne4eUw4Zdhm3ynK+nWLl1UoDPUJk1CB28XybFFNwkuTHamviwxKFxaq9Yu,iv:9dC9BSeBqw8ybETc9mW093h1TmyxO9O0rsbBmYqt0WE=,tag:ZscXXrXh7dvKTpk+6AefbQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:zul1GXSjxQ==,iv:QZkWLqpTpw7TRr0JaGdCmC5pMLvPFmgHY2ttggLOltE=,tag:qbbAabCwBfCU626+e+qylg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:/jVhXUaDwpo+qu1mf5NWjJq6k2g=,iv:p0ADIQsZI3A2kWdKfee2dOhyfD5mpgU5EG4QpaZfrGg=,tag:BoHIqnOeBoO1dwHRF+sOzw==,type:str]
+    #ENC[AES256_GCM,data:r1/TxEh6+7cJr2BqFnU=,iv:jn/AIG7GjwIf+1rtrky6t5u4pp/Ih+BC7PV2clU3tOU=,tag:aeD6Tzvtwz3F7imEoUXYJw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:X725b97yh6AehKSGXQ==,iv:sImJjNX5M2qALauuSLiFlWIB6GsslshmJF8wNiRqR1Y=,tag:Vwt7i7T8GfJC1k0i2d8U8g==,type:str]
+    SVCNET: ENC[AES256_GCM,data:id5JfBH6Fsq3tnppDQ==,iv:J3s528efa4ZYu30mxzukOYDElNfHKJ2SbPePD3IqkWI=,tag:wNOlGdGp2UTESCF+Y21ILg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:eXts/Q==,iv:vNi5vxsA5WTlogak3qDt/19bpPSm2mWvqy6NPxxKmO0=,tag:2m9wbxDKo2WqstCjkrVeqQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -51,14 +51,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFVWlEbzRrUXF5V0I1eVov
-            M0IreDZuUFlNeUdaTzJIRFZHUDA5QThUNW1VClVDeVN4K0FzYXh5ZFFUSmlDRnRj
-            WDgvb1VqendTM3BsdFpabGhML3NGMFkKLS0tIG5rdHNaSVdjd1IvVnVDZ0FHU2RQ
-            dUxlUDh1OEVsMmNJT0ZYWHZ4MGtCT1UKS8FzNPjn7UXAJDIiNR78N9oqHJIF1qvL
-            qtmHxuiOnu562ULCiVj/7Hl+9TWaGhDhpDBocpgoqOPS1FrwCoJ6Iw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3WTJDV1hobXNpTGhybkdy
+            eG8zK0dvL2d0NEtwdGg2ZmZPSUNDV3lKVW40CkJYVGw0NUdIdTgvRG56VFRRNXZD
+            T0t1ZEcrelNCYzJTSkxUM0hqbEJXNTgKLS0tIG5EdHl3VHR4bWhyMjJHcEMySnda
+            Qk1FbDU3MmhlRWFNVStnQyt2bkRXSDQKNIKyaoAcRVqGaf1EbM2ZaTs/4WtB5vn/
+            XL7GdCkL0ZoYoFrywE//A6aN4I6DJ9OlI/22swYEdW7rzVNVT8q6WQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-28T21:15:59Z"
-    mac: ENC[AES256_GCM,data:H9nqJXSvfdFk5a3I1d7uxQ7orwCypBAegLsHV77VJAhWyzs9KII0hc/mLA1SzWD2+mzDQZ3vecKKIlLIwLwjTFK8aZVqDFMvA6yugq5sUi6FSY+JZ3l8nBa21I+EqwJIAa1UzxZuvt20ABYlIV/P63Q+kXs7iXvKA6nUJV38E1U=,iv:vnmJUCm/iwlhs+HfnjxrTvZ3LGp2zI9yOAYxMkVmmKE=,tag:fYC0w4J8UpVGByUZbcT48A==,type:str]
+    lastmodified: "2024-12-29T21:10:14Z"
+    mac: ENC[AES256_GCM,data:igzN3pf8ZPfgpAFYi2YOoIUgjaY6msX/vGwA2pDdQNxW/NATaumVoIIPno4jq3E58MEbW95iIR5qpOpKqxJnRL43ntLE/kHI7D6nnXE1I0nCfyJ7D63iM2NO0YqpGcPiYnO3AMJV8QgREuieRhmnorMDG167LQ0fO+T5cfy/K40=,iv:t22TshLBFK6XJ36eRnN6jwgEBORiw9W1h1ukbG9RNE4=,tag:WY0d6RPxF/LykwvkJLwt7g==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
